[project]
name = "line-follower"
version = "0.1.0"
description = ""
authors = [
    {name = "jekxkan",email = "smirnova.eyu@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pyserial (>=3.5,<4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
